[gd_scene load_steps=9 format=3 uid="uid://b5flpgn0b4bqc"]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_txwwv"]
[ext_resource type="Texture2D" uid="uid://c3mkjjlpm0l65" path="res://sheets/UI/player-icon.png" id="2_3xmtl"]
[ext_resource type="Texture2D" uid="uid://c146tjvkhealo" path="res://sheets/UI/enemy-icon.png" id="3_jksr5"]
[ext_resource type="Texture2D" uid="uid://be45j24dr2n8l" path="res://sheets/UI/touch.png" id="4_nuet4"]
[ext_resource type="Texture2D" uid="uid://b55e0b076u6tx" path="res://sheets/UI/current_location.png" id="5_pdayk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8uucd"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aagyk"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
shadow_color = Color(0.340339, 0.340339, 0.340339, 0.6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ssbp6"]
bg_color = Color(1, 1, 1, 0.313726)
corner_radius_top_left = 200
corner_radius_top_right = 200
corner_radius_bottom_right = 200
corner_radius_bottom_left = 200

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_txwwv")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="score" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Score : "

[node name="VBoxContainer2" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer2"]
layout_mode = 2
text = "Game Over"

[node name="VBoxContainer3" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(400, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="ProgressBar" type="ProgressBar" parent="Control/MarginContainer/VBoxContainer3"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8uucd")
theme_override_styles/fill = SubResource("StyleBoxFlat_aagyk")
max_value = 5.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="Control/MarginContainer/VBoxContainer3"]
position = Vector2(-17, 27)
scale = Vector2(5.76121, 5.76121)
texture = ExtResource("2_3xmtl")

[node name="enemy-indicator" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(800, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="ProgressBar" type="ProgressBar" parent="Control/MarginContainer/enemy-indicator"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_8uucd")
theme_override_styles/fill = SubResource("StyleBoxFlat_aagyk")
max_value = 200.0
show_percentage = false

[node name="Sprite2D" type="Sprite2D" parent="Control/MarginContainer/enemy-indicator"]
position = Vector2(-12, 25)
scale = Vector2(5.76121, 5.76121)
texture = ExtResource("3_jksr5")

[node name="Button" type="Button" parent="Control/MarginContainer"]
visible = false
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_styles/normal = SubResource("StyleBoxFlat_ssbp6")
action_mode = 0
text = "Shoot"

[node name="touch_spot" type="Sprite2D" parent="Control"]
visible = false
scale = Vector2(4, 4)
texture = ExtResource("4_nuet4")

[node name="current_touch_spot" type="Sprite2D" parent="Control"]
visible = false
scale = Vector2(5, 5)
texture = ExtResource("5_pdayk")

[connection signal="button_down" from="Control/MarginContainer/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Control/MarginContainer/Button" to="." method="_on_button_button_up"]
[connection signal="pressed" from="Control/MarginContainer/Button" to="." method="_on_button_pressed"]
